force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <pluralLabel>Claims</pluralLabel>
    <nameField>
        <displayFormat>CLM-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores claim information for Appeals &amp; Grievances tracking</description>
</CustomObject>