force-app/main/default/objects/Claim__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Medically Necessary</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
            <value>
                <fullName>Experimental Treatment</fullName>
            </value>
            <value>
                <fullName>Out of Network</fullName>
            </value>
            <value>
                <fullName>Duplicate Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>