force-app/main/default/objects/Claim__c/fields/Finalized_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Date__c</fullName>
    <label>Finalized Date</label>
    <type>Date</type>
</CustomField>