force-app/main/default/objects/Claim__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Claims</relationshipLabel>
    <relationshipName>Related_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>