force-app/main/default/objects/Claim__c/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Type__c</columns>
    <columns>Claim_Status__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Member__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Claims</label>
</ListView>