force-app/main/default/objects/Claim__c/listViews/Denied_Claims.listView-meta.xml
<ListView>
    <fullName>Denied_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Type__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Denial_Reason__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Finalized_Date__c</columns>
    <columns>Member__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Related_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Status__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <label>Denied Claims</label>
</ListView>