force-app/main/default/objects/Claim__c/listViews/Pending_Claims.listView-meta.xml
<ListView>
    <fullName>Pending_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Type__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Member__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Claims</label>
</ListView>