force-app/main/default/objects/Claim__c/listViews/Recent_Claims.listView-meta.xml
<ListView>
    <fullName>Recent_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Type__c</columns>
    <columns>Claim_Status__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Member__c</columns>
    <columns>Provider_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recently Viewed</label>
</ListView>